--- a/src/pages/play/poumon.css
+++ b/src/pages/play/poumon.css
@@ -1,12 +1,14 @@
 div.poumon {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-size: cover;
     background-repeat: no-repeat;
     z-index: 1;
+    text-align: center;
 }
 .xlarge{
     font-size: xxx-large;
@@ -17,4 +19,31 @@ div.poumon {
 }
 .table-collapse{
  border-collapse:collapse;
+}
+
+h1+p{
+    margin-bottom: 2em;
+}
+.p-progressbar{
+    margin:0.5em;
+    align-self:stretch;
+}
+.btnNav{
+    display: flex;
+    justify-content: space-around;
+}
+
+.btnNav button{
+    margin-right: 0.5em;
+}
+
+p{
+    text-align: center;
+}
+
+div.card{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
