--- a/src/pages/play/poumon.css
+++ b/src/pages/play/poumon.css
@@ -1,49 +1,55 @@
 div.poumon {
-    width: 100vw;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    z-index: 1;
-    text-align: center;
+  width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 1;
+  text-align: center;
 }
-.xlarge{
-    font-size: xxx-large;
+.xlarge {
+  font-size: xxx-large;
 }
-.centreCell{
-    border-right: 2px  solid black;
-    border-left: 2px  solid black;
+.centreCell {
+  border-right: 2px solid black;
+  border-left: 2px solid black;
 }
-.table-collapse{
- border-collapse:collapse;
-}
-
-h1+p{
-    margin-bottom: 2em;
-}
-.p-progressbar{
-    margin:0.5em;
-    align-self:stretch;
-}
-.btnNav{
-    display: flex;
-    justify-content: space-around;
+.table-collapse {
+  border-collapse: collapse;
 }
 
-.btnNav button{
-    margin-right: 0.5em;
+h1 + p {
+  margin-bottom: 2em;
+}
+.p-progressbar {
+  margin: 0.5em;
+  align-self: stretch;
+}
+.btnNav {
+  display: flex;
+  justify-content: space-around;
 }
 
-p{
-    text-align: center;
+.btnNav button {
+  margin-right: 0.5em;
 }
 
-div.card{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+p {
+  text-align: center;
+}
+
+div.card {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+p {
+  margin-bottom: 10px;
+  text-align: justify;
+  text-shadow: #363636 2px 0 10px;
 }
