feat: Add hidden logo in about page

--- a/src/assets/css/about/about.css
+++ b/src/assets/css/about/about.css
@@ -28,6 +28,15 @@ div.about h1, div.about h2 {
     padding-bottom: 2vh;
 }
 
+div.about img {
+    width: auto;
+    height: 20vh;
+}
+
+div.about li {
+    cursor: pointer;
+}
+
 
 
 
